--- a/game.css
+++ b/game.css
@@ -4,15 +4,20 @@ html, body {
   margin: 0;
 }
 
-body{
+/*body{
     background-image: linear-gradient(grey, black);
-}
+}*/
 
 #gameCanvas {
     align-content: center;
-    width: 95%; 
-    height: 90%;
+    /*width: 95%; 
+    height: 90%;*/
     border:1px solid #000000; 
      background-image: linear-gradient(darkblue, cyan);
-    margin: 3%
+    /*margin: 3%*/
+    width:  100%;
+    height: 100%;
+    margin: 0;
 }
+
+#
